Polish x-address-pages

--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -73,7 +73,8 @@ view-identicons [button] {
 
 view-identicons x-backdrop {
     content: '';
-    position: absolute;
+    position: fixed;
+    bottom: 0;
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
     pointer-events: none;
@@ -124,7 +125,7 @@ view-identicons[selected] x-address {
 view-identicons[selected] x-backdrop {
     pointer-events: all;
     opacity: 1;
-    border: 100vmax solid rgb(21, 20, 51);
+    /* border: 100vmax solid rgb(21, 20, 51); */
 }
 
 view-identicons x-identicon[selected] {
