--- a/x-qr-scanner/x-qr-scanner.css
+++ b/x-qr-scanner/x-qr-scanner.css
@@ -1,12 +1,19 @@
 .x-qr-scanner {
     position: absolute;
-    left: 0;
     top: 0;
+    left: 0;
     right: 0;
     bottom: 0;
     overflow: hidden;
     pointer-events: none;
-    background: #333;
+}
+
+.x-qr-scanner div{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: #555;
 }
 
 .x-qr-scanner video {
