--- a/x-pages/x-pages.css
+++ b/x-pages/x-pages.css
@@ -9,8 +9,8 @@ x-pages > [page] {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     box-sizing: border-box;
     /*    animation-timing-function: ease-in; */
 }
