--- a/x-password-indicator/x-password-indicator.css
+++ b/x-password-indicator/x-password-indicator.css
@@ -1,9 +1,14 @@
 @import '/library/nimiq-style/nimiq-style.css';
 
+x-password-indicator{
+	width: 100%;
+	max-width: var(--max-width);
+	padding: 16px 0;
+}
+
 x-password-indicator meter {
-    margin: 0 auto 1em;
     width: 100%;
-    height: 0.5em;
+    height: 6px;
   
     /* Applicable only to Firefox */
     background: none;
@@ -16,15 +21,14 @@ x-password-indicator meter::-webkit-meter-bar {
 }
 
 /* Webkit based browsers */
-x-password-indicator meter[value="10"]::-webkit-meter-optimum-value { background: var(--warning-color); }
-x-password-indicator meter[value="70"]::-webkit-meter-optimum-value { background: var(--error-color); }
+x-password-indicator meter[value="10"]::-webkit-meter-optimum-value { background: var(--error-color); }
+x-password-indicator meter[value="70"]::-webkit-meter-optimum-value { background: var(--warning-color); }
 x-password-indicator meter[value="100"]::-webkit-meter-optimum-value { background: var(--success-color); }
 
 /* Gecko based browsers */
-x-password-indicator meter[value="10"]::-moz-meter-bar { background: var(--warning-color); }
-x-password-indicator meter[value="70"]::-moz-meter-bar { background: var(--warning-color); }
-x-password-indicator meter[value="100"]::-moz-meter-bar { background: var(--warning-color); }
+x-password-indicator meter[value="10"]::-moz-meter-bar { background: var(--error-color); }
+x-password-indicator meter[value="70"]::-moz-meter-bar { background: var(--error-color); }
+x-password-indicator meter[value="100"]::-moz-meter-bar { background: var(--error-color); }
 
 x-password-indicator .label {
-  margin-bottom: 5px;
 }
