x-numpad: reimplement to fix a couple of issues (wrong behaviour on entering dot or fractions or deleting digits, bug if the numpad but not a key is clicked, bad reflection of actual user input in the displayed value, avoid inputting the dot multiple times, support for max decimals, etc)

--- a/x-numpad/x-numpad.css
+++ b/x-numpad/x-numpad.css
@@ -4,6 +4,9 @@ x-numpad {
     padding-bottom: 16px;
     text-align: center;
     touch-action: manipulation;
+    pointer-events: none;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 x-numpad>* {
@@ -20,6 +23,14 @@ x-numpad>* {
     font-size: 32px;
     line-height: 48px;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0.3);
-    -webkit-user-select: none;
-    user-select: none;
+    pointer-events: all;
+}
+
+x-numpad > [dot] {
+    transition: opacity 0.7s;
+}
+
+x-numpad > [dot].hidden {
+    opacity: 0;
+    pointer-events: none;
 }
