--- a/x-amount-input/x-amount-input.css
+++ b/x-amount-input/x-amount-input.css
@@ -2,6 +2,10 @@
 @import '../x-amount/x-amount.css';
 @import '../x-numpad/x-numpad.css';
 
+x-amount-input input {
+    font-size: 56px !important;
+    padding-bottom: 0;
+}
 
 x-amount-input input:after {
     position: absolute;
