--- a/screen-backup-file/screen-backup-file.css
+++ b/screen-backup-file/screen-backup-file.css
@@ -1,4 +1,4 @@
-@import '/library/nimiq-style/nimiq-style.css';
+@import '../x-screen/x-screen.css';
 @import '../x-slides/x-slides.css';
 @import '../x-wallet-backup/x-wallet-backup.css';
 @import '../x-loading-animation/x-loading-animation.css';
