x-amount-input: avoid invalid inputs like 1.2.3 or 4..2 and enforce maxDecimals

--- a/x-amount-input/x-amount-input.css
+++ b/x-amount-input/x-amount-input.css
@@ -23,6 +23,7 @@ x-amount-input input:after {
 
 x-amount-input input[disabled] {
     opacity: 1;
+    cursor: default;
 }
 
 x-amount-input form {
