--- a/x-screen/x-screen.css
+++ b/x-screen/x-screen.css
@@ -19,8 +19,10 @@ body {
     text-align: center;
 }
 
+
+
 .x-screen,
-.x-parent-screen {
+.x-screen-fit {
     position: absolute;
     display: none;
     justify-content: center;
@@ -33,12 +35,11 @@ body {
     animation-duration: 600ms;
 }
 
-.x-parent-screen {
+.x-parent-fit {
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    display: flex;
     pointer-events: none;
 }
 
@@ -46,6 +47,10 @@ body {
     padding: 24px 16px;
     box-sizing: border-box;
     pointer-events: all;
+}
+
+.x-slides{
+    position: relative;
 }
 
 .x-entry-animation {
@@ -72,7 +77,8 @@ body {
 
 
 @media (min-width: 420px) {
-    .x-screen {
+    .x-screen,
+    .x-slides {
         max-width: 800px;
         max-height: 672px;
         padding: 32px 88px 48px;
