--- a/screen-backup-phrase-validate/screen-backup-phrase-validate.css
+++ b/screen-backup-phrase-validate/screen-backup-phrase-validate.css
@@ -1,2 +1,2 @@
-@import '/library/nimiq-style/nimiq-style.css';
+@import '../x-screen/x-screen.css';
 @import '../x-mnemonic-validate/x-mnemonic-validate.css';
