--- a/x-address-input/x-address-input.css
+++ b/x-address-input/x-address-input.css
@@ -25,7 +25,7 @@ x-address-input input[type="text"] {
     text-transform: uppercase;
 }
 
-x-address-input [icon-paste]{
+x-address-input [icon-person]{
     position: absolute;
 }
 
@@ -40,5 +40,6 @@ x-address-input input[type="text"]::-webkit-input-placeholder {
 x-address-input .prefix {
   position: absolute;
   left: 30px;
-  line-height: 34px;
+  line-height: 32px;
+  padding-top: 1px;
 }
