Polish screen recipient

--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -1,2 +1,7 @@
 @import '../x-password-input/x-password-input.css';
 @import '../x-password-indicator/x-password-indicator.css';
+
+x-password-setter{
+	width: 100%;
+	max-width: var(--max-width);
+}
