screen-backup-file: added half-working x-indicator

--- a/screen-backup-file/screen-backup-file.css
+++ b/screen-backup-file/screen-backup-file.css
@@ -4,3 +4,4 @@
 @import '../x-loading-animation/x-loading-animation.css';
 @import '../x-success-mark/x-success-mark.css';
 @import '../x-password-setter/x-password-setter.css';
+@import '../x-indicator/x-indicator.css';
