--- a/x-numpad/x-numpad.css
+++ b/x-numpad/x-numpad.css
@@ -7,6 +7,7 @@ x-numpad {
     pointer-events: none;
     user-select: none;
     -webkit-user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 x-numpad>* {
