--- a/screen-backup-file-import/screen-backup-file-import.css
+++ b/screen-backup-file-import/screen-backup-file-import.css
@@ -3,3 +3,9 @@
 @import '../x-loading-animation/x-loading-animation.css';
 @import '../x-wallet-backup-import/x-wallet-backup-import.css';
 @import '../x-password-input/x-password-input.css';
+
+@media (max-height: 480px){
+	screen-create-password-import button{
+		display: none;
+	}
+}
