--- a/screen-accounts/screen-accounts.css
+++ b/screen-accounts/screen-accounts.css
@@ -15,6 +15,7 @@ x-account {
     padding: 8px 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     animation: from-right 500ms;
+    cursor: pointer;
 }
 
 x-account:hover {
