minor cleanup, positioning of x-slide-indicator

--- a/x-slide-indicator/x-slide-indicator.css
+++ b/x-slide-indicator/x-slide-indicator.css
@@ -7,6 +7,8 @@ x-slide-indicator {
     box-sizing: border-box;
     padding: 24px 16px 0;
     min-height: 16px;
+    position: absolute;
+    bottom: 20px;
 }
 
 x-slide-indicator x-dot {
