--- a/x-screen/x-screen.css
+++ b/x-screen/x-screen.css
@@ -70,13 +70,15 @@ x-slides{
     flex-grow: 1;
     width: 100%;
     position: relative;
+    /*height: 100%;*/
+    /*max-height: 572px;*/
 }
 
 @media (min-width: 420px) {
     .x-screen,
     .x-slides {
         max-width: 800px;
-        max-height: 672px;
+        /*max-height: 672px;*/
         padding: 32px 88px 48px;
     }
 }
