--- a/nimiq-logo/nimiq-logo.css
+++ b/nimiq-logo/nimiq-logo.css
@@ -25,13 +25,14 @@ nimiq-logo[large] {
     font-weight: 800;
     color: rgba(255,255,255, 0.5);
     text-align: center;
-    padding-top: 100px;
+    padding-top: 144px;
     padding-left: 0;
-    padding-bottom: 20px;
     background-size: 88px;
+    flex-grow: 1;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: center center;
 }
 
 nimiq-logo[large]:empty:after {
