Fix password indicator in Firefox

--- a/x-password-indicator/x-password-indicator.css
+++ b/x-password-indicator/x-password-indicator.css
@@ -8,8 +8,7 @@ x-password-indicator{
 x-password-indicator meter {
     width: 100%;
     height: 6px;
-  
-    /* Applicable only to Firefox */
+
     background: none;
     background-color: rgba(0, 0, 0, 0.1);
 }
@@ -26,8 +25,8 @@ x-password-indicator meter[value="100"]::-webkit-meter-optimum-value { backgroun
 
 /* Gecko based browsers */
 x-password-indicator meter[value="10"]::-moz-meter-bar { background: var(--error-color); }
-x-password-indicator meter[value="70"]::-moz-meter-bar { background: var(--error-color); }
-x-password-indicator meter[value="100"]::-moz-meter-bar { background: var(--error-color); }
+x-password-indicator meter[value="70"]::-moz-meter-bar { background: var(--warning-color); }
+x-password-indicator meter[value="100"]::-moz-meter-bar { background: var(--success-color); }
 
 x-password-indicator .label {
 }
