fix some mobile style issues, tested on android:

--- a/screen-backup-file-import/screen-backup-file-import.css
+++ b/screen-backup-file-import/screen-backup-file-import.css
@@ -8,4 +8,12 @@
 	screen-create-password-import button{
 		display: none;
 	}
+
+	x-screen, x-screen-fit {
+		height: 85vh !important;
+	}
+}
+
+screen-backup-file-import-password {
+	justify-content: stretch;
 }
